Swap SVG fill colors in `app.css` and `product.scss` to ensure consistent theming across light and dark modes.

--- a/src/assets/styles/04-components/product.scss
+++ b/src/assets/styles/04-components/product.scss
@@ -580,7 +580,7 @@ salla-comments
 
 .s-breadcrumb-arrow{
   svg{
-    @apply fill-[var(--color-light-box-background)] dark:fill-[var(--color-dark-box-background)];
+    @apply fill-[var(--color-dark-box-background)] dark:fill-[var(--color-light-box-background)];
     
   }
 }
